Question handaling updated + fixed